--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -33,6 +33,10 @@ dependencies {
     // Swagger 설정
     implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0"
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    // jwt 토큰 인증 설정
+    implementation "io.jsonwebtoken:jjwt-api:0.11.2"
+    runtimeOnly "io.jsonwebtoken:jjwt-impl:0.11.2", "io.jsonwebtoken:jjwt-jackson:0.11.2"
 }
 
 tasks.named('test') {
