--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -4,9 +4,9 @@ spring:
   # MySQL DataSource
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/testboard?serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/noticeboard?serverTimezone=UTC
     username: root
-    password: 9999
+    password: 1234
 
 # Mapper Xml Location
 mybatis:
