--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -30,6 +30,9 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
 
+    // security 의존성 추가
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
     // Swagger 설정
     implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0"
     implementation 'org.springframework.boot:spring-boot-starter-validation'
