--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -21,6 +21,7 @@ mybatis:
 uploadPath: file:///C:/images/
 defaultImgPath: classpath:/static/default-image/
 memberImgLocation: C:/images/member
+productImgLocation: C:/images/product
 
 ---
 spring:
