feat: BE 카테고리 생성 시 이미지 업로드 기능 추가

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -22,6 +22,7 @@ uploadPath: file:///C:/images/
 defaultImgPath: classpath:/static/default-image/
 memberImgLocation: C:/images/member
 productImgLocation: C:/images/product
+categoryImgLocation: C:/images/category
 
 ---
 spring:
