--- a/noticeboard-service/backend/build.gradle
+++ b/noticeboard-service/backend/build.gradle
@@ -21,28 +21,35 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    mybatisVersion = "3.0.3";
+    swaggerVerion = "2.2.0";
+    jwtVersion = "0.11.2";
+    log4jVersion = "1.16";
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
+    implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:${mybatisVersion}"
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
+    testImplementation "org.mybatis.spring.boot:mybatis-spring-boot-starter-test:${mybatisVersion}"
 
     // security 의존성 추가
     implementation 'org.springframework.boot:spring-boot-starter-security'
 
     // Swagger 설정
-    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0"
+    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${swaggerVerion}"
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     // jwt 토큰 인증 설정
-    implementation "io.jsonwebtoken:jjwt-api:0.11.2"
-    runtimeOnly "io.jsonwebtoken:jjwt-impl:0.11.2", "io.jsonwebtoken:jjwt-jackson:0.11.2"
+    implementation "io.jsonwebtoken:jjwt-api:${jwtVersion}"
+    runtimeOnly "io.jsonwebtoken:jjwt-impl:${jwtVersion}", "io.jsonwebtoken:jjwt-jackson:${jwtVersion}"
 
     // log4j
-    implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
+    implementation "org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:${log4jVersion}"
 }
 
 tasks.named('test') {
