--- a/noticeboard-service/frontend/.prettierrc
+++ b/noticeboard-service/frontend/.prettierrc
@@ -1,6 +1,11 @@
 {
+  "$schema": "https://json.schemastore.org/prettierrc",
+  "semi": false,
   "singleQuote": true,
-  "semi": true,
-  "trailingComma": "es5",
-  "printWidth": 80
+  "arrowParens": "avoid",
+  "tabWidth": 2,
+  "trailingComma": "all",
+  "printWidth": 80,
+  "bracketSpacing": true,
+  "endOfLine": "auto"
 }
