--- a/noticeboard-service/backend/src/main/resources/application.yml
+++ b/noticeboard-service/backend/src/main/resources/application.yml
@@ -18,11 +18,12 @@ mybatis:
     map-underscore-to-camel-case: true
 
 # 이미지 경로 설정
-uploadPath: file:///C:/images/
-defaultImgPath: classpath:/static/default-image/
-memberImgLocation: C:/images/member
-productImgLocation: C:/images/product
-categoryImgLocation: C:/images/category
+upload-path: file:///C:/images/
+default-img-path: classpath:/static/default-image/
+member-img-location: C:/images/member
+product-img-location: C:/images/product
+category-img-location: C:/images/category
+
 
 ---
 spring:
