chore: docker-compose 에 이미지 저장용 볼륨 추가 (#27)

--- a/noticeboard-service/backend/src/main/resources/application.yml
+++ b/noticeboard-service/backend/src/main/resources/application.yml
@@ -9,13 +9,6 @@ mybatis:
   configuration:
     map-underscore-to-camel-case: true
 
-# 이미지 경로 설정
-upload-path: file:///C:/images/
-default-img-path: classpath:/static/default-image/
-member-img-location: C:/images/member
-product-img-location: C:/images/product
-category-img-location: C:/images/category
-
 # 카카오 REST API KEY
 kakao-rest-api-key: 049c84589ed98d01f5fe19b15cb67ea4
 
@@ -30,6 +23,13 @@ spring:
     username: root
     password: 1234
 
+# 이미지 경로 설정
+upload-path: file:///C:/images/
+default-img-path: classpath:/static/default-image/
+member-img-location: C:/images/member
+product-img-location: C:/images/product
+category-img-location: C:/images/category
+
 ---
 spring:
   config:
@@ -40,6 +40,12 @@ spring:
     url: jdbc:log4jdbc:mysql://mysql-app:3306/noticeboard?serverTimezone=UTC # 컨테이너 sql 서비스명
     username: root
     password: 1234
+
+upload-path: file:/app/images/
+default-img-path: classpath:/static/default-image/
+member-img-location: /app/images/member
+product-img-location: /app/images/product
+category-img-location: /app/images/category
 
 ---
 spring:
