--- a/noticeboard-service/backend/docker-compose.yml
+++ b/noticeboard-service/backend/docker-compose.yml
@@ -24,6 +24,7 @@ services:
     working_dir: /app
     volumes:
       - ./build/libs/noticeboard-service-0.0.1-SNAPSHOT.jar:/app/spring-app.jar
+      - app_images:/app/images
     environment:
       SPRING_PROFILES_ACTIVE: dev
     ports:
@@ -39,4 +40,5 @@ networks:
     driver: bridge
 
 volumes:
-  mysql_data:
+  mysql_data: # 데이터 저장
+  app_images: # 이미지 저장
