--- a/noticeboard-service/docker-compose.yml
+++ b/noticeboard-service/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     container_name: spring-app
     working_dir: /app
     volumes:
-      - ./build/libs/noticeboard-service-0.0.1-SNAPSHOT.jar:/app/spring-app.jar
+      - ./backend/build/libs/noticeboard-service-0.0.1-SNAPSHOT.jar:/app/spring-app.jar
       - app_images:/app/images
     environment:
       SPRING_PROFILES_ACTIVE: dev
@@ -32,6 +32,19 @@ services:
     depends_on:
       - mysql
     entrypoint: ["java", "-jar", "/app/spring-app.jar"]
+    networks:
+      - backend
+  
+  nginx:
+    image: nginx:latest
+    container_name: nginx-app
+    depends_on:
+      - backend
+    ports:
+      - "80:80"
+    volumes:
+      - ./frontend/dist:/usr/share/nginx/html                # Vite 빌드 결과
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf    # Nginx 설정
     networks:
       - backend
 
