--- a/noticeboard-service/nginx/default.conf
+++ b/noticeboard-service/nginx/default.conf
@@ -5,14 +5,9 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # 정적 파일 처리
-    location / {
-        try_files $uri $uri/ /index.html;
-    }
-
     # Spring API 프록시
-    location @backend {
-        proxy_pass http://spring-app:8080; # todo: 요청 경로 수정 
+    location / {
+        proxy_pass http://spring-app:8080/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
