feat: Nginx 로드밸런싱 및 정적 파일 요청 분기 처리 추가 (#30)

--- a/noticeboard-service/nginx/default.conf
+++ b/noticeboard-service/nginx/default.conf
@@ -1,3 +1,8 @@
+upstream spring_app_cluster {
+    server spring-app-1:8080;
+    server spring-app-2:8080;
+}
+
 server {
     listen 80;
     server_name localhost;
@@ -5,12 +10,17 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # Spring API 프록시
-    location / {
-        proxy_pass http://spring-app:8080/;
+    # API 요청
+    location /api/ {
+        proxy_pass http://spring_app_cluster/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    # 정적 파일 요청
+    location / {
+        try_files $uri $uri/ /index.html;
     }
 }
