chore: Nginx 설정에 HTTPS 리디렉션 및 SSL 인증서 추가 (#31)

--- a/noticeboard-service/nginx/default.conf
+++ b/noticeboard-service/nginx/default.conf
@@ -3,9 +3,19 @@ upstream spring_app_cluster {
     server spring-app-2:8080;
 }
 
+# HTTP -> HTTPS 리디렉션
 server {
     listen 80;
     server_name localhost;
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name localhost;
+
+    ssl_certificate /etc/nginx/ssl/server.crt;
+    ssl_certificate_key /etc/nginx/ssl/server.key;
 
     root /usr/share/nginx/html;
     index index.html;
