--- a/noticeboard-service/backend/build.gradle
+++ b/noticeboard-service/backend/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation "org.mybatis.spring.boot:mybatis-spring-boot-starter-test:${mybatisVersion}"
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
 
     // security 의존성 추가
     implementation 'org.springframework.boot:spring-boot-starter-security'
