--- a/noticeboard-service/docker-compose.yml
+++ b/noticeboard-service/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       - "8080"
     depends_on:
       - mysql
-    entrypoint: ["java", "-jar", "/app/spring-app.jar"]
+    entrypoint: ["/bin/sh", "-c", "java -jar /app/spring-app.jar > /app/logs/nohup.log 2>&1"]
     networks:
       - backend
 
@@ -51,7 +51,7 @@ services:
       - "8080"
     depends_on:
       - mysql
-    entrypoint: ["java", "-jar", "/app/spring-app.jar"]
+    entrypoint: ["/bin/sh", "-c", "java -jar /app/spring-app.jar > /app/logs/nohup.log 2>&1"]
     networks:
       - backend
   
@@ -68,6 +68,18 @@ services:
       - ./frontend/dist:/usr/share/nginx/html                # Vite 빌드 결과
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf    # Nginx 설정
       - ./nginx/ssl:/etc/nginx/ssl # SSL 설정
+    networks:
+      - backend
+
+  log-backup:
+    image: alpine:latest
+    container_name: log-backup
+    volumes:
+      - ./backup-logs.sh:/backup-logs.sh:ro
+      - ./logs/spring-app-1:/logs/spring-app-1:ro
+      - ./logs/spring-app-2:/logs/spring-app-2:ro
+      - ./backup_logs:/backup_logs
+    entrypoint: ["/bin/sh", "-c", "apk add --no-cache bash coreutils grep && while true; do /backup-logs.sh; sleep 86400; done"]
     networks:
       - backend
 
