chore: Promethus 메트릭 수집을 위한 actuator 엔드포인트 및 설정 추가 (#39)

--- a/noticeboard-service/backend/build.gradle
+++ b/noticeboard-service/backend/build.gradle
@@ -56,6 +56,9 @@ dependencies {
     // actuator
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
+    // prometheus
+    implementation 'io.micrometer:micrometer-registry-prometheus'
+
     // 메일 전송 + 로그 추적 라이브러리
     implementation files('libs/mail-sender-0.0.1-SNAPSHOT.jar')
 }
