fix: test 설정에 이미지 경로 추가

--- a/noticeboard-service/backend/src/main/resources/application-test.yml
+++ b/noticeboard-service/backend/src/main/resources/application-test.yml
@@ -7,3 +7,9 @@ spring:
     url: jdbc:log4jdbc:mysql://localhost:3306/testboard?serverTimezone=UTC
     username: root
     password: 1234
+
+upload-path: file:///C:/images/
+default-img-path: classpath:/static/default-image/
+member-img-location: C:/images/member
+product-img-location: C:/images/product
+category-img-location: C:/images/category
