fix: Frontend Build 경로 수정 (#34)

--- a/noticeboard-service/Jenkinsfile
+++ b/noticeboard-service/Jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
 
     stage('Frontend Build') {
       steps {
-        dir('frontend') {
+        dir('noticeboard-service/frontend') {
           sh 'npm install'
           sh 'npm run build'
         }
