chore: Jenkins 컨테이너에 Docker Compose 설치 (#34)

--- a/noticeboard-service/docker-compose.jenkins.yml
+++ b/noticeboard-service/docker-compose.jenkins.yml
@@ -2,7 +2,9 @@ version: '3.8'
 
 services:
   jenkins:
-    image: jenkins/jenkins:lts
+    build:
+      context: . # Dockerfile이 있는 위치
+      dockerfile: Dockerfile.jenkins
     container_name: jenkins
     ports:
       - "8081:8080"
