--- a/noticeboard-service/Dockerfile.jenkins
+++ b/noticeboard-service/Dockerfile.jenkins
@@ -4,6 +4,9 @@ USER root
 
 RUN apt-get update && \
     curl -fsSL https://deb.nodesource.com/setup_18.x | bash - && \
-    apt-get install -y nodejs 
+    apt-get install -y nodejs \
+    && curl -SL https://github.com/docker/compose/releases/download/v2.29.2/docker-compose-linux-x86_64 -o /usr/local/bin/docker-compose \
+    && chmod +x /usr/local/bin/docker-compose \
+    && ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
 
 USER jenkins
