fix: Jenkinsfile Deploy 경로 수정 (#34)

--- a/noticeboard-service/Jenkinsfile
+++ b/noticeboard-service/Jenkinsfile
@@ -29,13 +29,15 @@ pipeline {
 
     stage('Deploy') {
       steps {
-        sh '''
+        dir('noticeboard-service') {
+          sh '''
           echo "🐳 Stopping existing containers..."
           docker-compose down
 
           echo "🚀 Starting containers with updated build..."
           docker-compose up -d --build
-        '''
+          '''
+        }
       }
     }
   }
