fix: Jenkinsfile Deploy 단계에서 자동화 스크립트 사용하도록 변경 (#34)

--- a/noticeboard-service/Jenkinsfile
+++ b/noticeboard-service/Jenkinsfile
@@ -35,7 +35,8 @@ pipeline {
           docker-compose down
 
           echo "🚀 Starting containers with updated build..."
-          docker-compose up -d --build
+          chmod +x ./deploy.sh
+          ./deploy.sh
           '''
         }
       }
