--- a/noticeboard-service/docker-compose.jenkins.yml
+++ b/noticeboard-service/docker-compose.jenkins.yml
@@ -12,7 +12,7 @@ services:
     volumes:
       - jenkins_home:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
-      - ./:/workspace
+      - ./:/workspace/spring-vue-app
     user: root
     environment:
       - JAVA_OPTS=-Djenkins.install.runSetupWizard=false
