refactor: 백엔드 컨테이너를 이미지 기반 배포로 전환 (#43)

--- a/noticeboard-service/Jenkinsfile
+++ b/noticeboard-service/Jenkinsfile
@@ -34,9 +34,11 @@ pipeline {
           echo "🐳 Stopping existing containers..."
           docker-compose down
 
+          echo "🐳 Building new images..."
+          docker-compose build
+
           echo "🚀 Starting containers with updated build..."
-          chmod +x ./deploy.sh
-          ./deploy.sh
+          docker compose up -d
           '''
         }
       }
