--- a/noticeboard-service/docker-compose.yml
+++ b/noticeboard-service/docker-compose.yml
@@ -66,7 +66,7 @@ services:
       - "443:443"
     volumes:
       - ./frontend/dist:/usr/share/nginx/html                # Vite 빌드 결과
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf    # Nginx 설정
+      - ./nginx/default.conf:/etc/nginx/nginx.conf    # Nginx 설정
       - ./nginx/ssl:/etc/nginx/ssl # SSL 설정
     networks:
       - backend
