--- a/noticeboard-service/docker-compose.yml
+++ b/noticeboard-service/docker-compose.yml
@@ -56,9 +56,7 @@ services:
       - backend
   
   nginx:
-    build:
-      context: .
-      dockerfile: Dockerfile.nginx
+    image: nginx:latest
     container_name: nginx-app
     depends_on:
       - spring-app-1
@@ -66,6 +64,10 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    volumes:
+      - ./frontend/dist:/usr/share/nginx/html                # Vite 빌드 결과
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf    # Nginx 설정
+      - ./nginx/ssl:/etc/nginx/ssl # SSL 설정
     networks:
       - backend
 
