--- a/noticeboard-service/docker-compose.yml
+++ b/noticeboard-service/docker-compose.yml
@@ -56,7 +56,9 @@ services:
       - backend
   
   nginx:
-    image: nginx:latest
+    build:
+      context: .
+      dockerfile: Dockerfile.nginx
     container_name: nginx-app
     depends_on:
       - spring-app-1
@@ -64,10 +66,6 @@ services:
     ports:
       - "80:80"
       - "443:443"
-    volumes:
-      - ./frontend/dist:/usr/share/nginx/html                # Vite 빌드 결과
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf    # Nginx 설정
-      - ./nginx/ssl:/etc/nginx/ssl # SSL 설정
     networks:
       - backend
 
