refactor: Docker 실행 시 민감 정보를 Jenkins Credentials 기반 환경 변수로 정의 (#49)

--- a/noticeboard-service/docker-compose.yml
+++ b/noticeboard-service/docker-compose.yml
@@ -30,6 +30,11 @@ services:
       - ./logs/spring-app:/app/logs  # 로그 디렉토리 추가
     environment:
       SPRING_PROFILES_ACTIVE: dev
+      JWT_SECRET: "${JWT_SECRET}"
+      KAKAO_API_KEY: "${KAKAO_API_KEY}"
+      MAIL_USERNAME: "${MAIL_USERNAME}"
+      MAIL_PASSWORD: "${MAIL_PASSWORD}"
+      SLACK_WEBHOOK_URL: "${SLACK_WEBHOOK_URL}"
     expose:
       - "8080"
     depends_on:
@@ -48,6 +53,11 @@ services:
       - ./logs/spring-app:/app/logs  # 로그 디렉토리 추가
     environment:
       SPRING_PROFILES_ACTIVE: dev
+      JWT_SECRET: "${JWT_SECRET}"
+      KAKAO_API_KEY: "${KAKAO_API_KEY}"
+      MAIL_USERNAME: "${MAIL_USERNAME}"
+      MAIL_PASSWORD: "${MAIL_PASSWORD}"
+      SLACK_WEBHOOK_URL: "${SLACK_WEBHOOK_URL}"
     expose:
       - "8080"
     depends_on:
