--- a/noticeboard-admin/frontend/vue3-admin-project/package.json
+++ b/noticeboard-admin/frontend/vue3-admin-project/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^44.3.0",
     "@ckeditor/ckeditor5-vue": "^7.3.0",
+    "axios": "^1.10.0",
+    "bootstrap": "^5.3.7",
     "pinia": "^2.2.6",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
