feat: store에 username 저장 및 Axios 응답 인터셉터 추가 (#55)
- Pinia store에 username 필드 추가
- accessToken 만료(403) 시 refresh API 호출하여 토큰 재발급
- 재발급된 토큰 갱신 후 원래 요청 재시도 로직 추가

--- a/noticeboard-admin/backend/src/main/resources/application.yml
+++ b/noticeboard-admin/backend/src/main/resources/application.yml
@@ -16,9 +16,12 @@ spring:
 # Mapper Xml Location
 mybatis:
   mapper-locations: classpath:mapper/*.xml
-  type-aliases-package: com.limnj.noticeboardadmin.category, com.limnj.noticeboardadmin.image, com.limnj.noticeboardadmin.notice, com.limnj.noticeboardadmin.member
+  type-aliases-package: com.limnj.noticeboardadmin.category, com.limnj.noticeboardadmin.image, com.limnj.noticeboardadmin.notice, com.limnj.noticeboardadmin.member, com.limnj.noticeboardadmin.jwt
   configuration:
     map-underscore-to-camel-case: true
+
+jwt:
+  secret: 6qh3C2sv6MnfJrcwIsJdXApelnm9s0SxC/oAmv5zzDQ=
 
 # 이미지 경로 설정
 uploadPath: file:///C:/images/
