feat: CaffeineCache를 이용한 이메일 인증 로직 구현 (#61)
- CaffeineCache 를 이용해 인증 코드와 만료 시간 임시 저장
- 구현체별 Bean 이름 지정

--- a/noticeboard-admin/backend/build.gradle
+++ b/noticeboard-admin/backend/build.gradle
@@ -55,6 +55,9 @@ dependencies {
 	// 이메일 전송
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
+	// Caffeine Cache 설정 ( in-memory+TTL )
+	implementation 'com.github.ben-manes.caffeine:caffeine'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
