--- a/noticeboard-admin/backend/build.gradle
+++ b/noticeboard-admin/backend/build.gradle
@@ -58,6 +58,9 @@ dependencies {
 	// Caffeine Cache 설정 ( in-memory+TTL )
 	implementation 'com.github.ben-manes.caffeine:caffeine'
 
+	// Redis 설정
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
