--- a/noticeboard-service/backend/src/main/resources/application-local.yml
+++ b/noticeboard-service/backend/src/main/resources/application-local.yml
@@ -14,7 +14,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,info,metrics,threaddump,heapdump,httptrace,loggers
+        include: health,info,metrics,threaddump,heapdump,httptrace,loggers,prometheus
   endpoint:
     health:
       show-details: always
