chore: 응답시간 메트릭 수집을 위한 설정 추가 (#39)

--- a/noticeboard-service/backend/src/main/resources/application-local.yml
+++ b/noticeboard-service/backend/src/main/resources/application-local.yml
@@ -21,6 +21,11 @@ management:
   metrics:
     enable:
       all: true
+    distribution:
+      percentiles-histogram:
+        http.server.requests: true      # <-- latency bucket 생성
+      percentiles:
+        http.server.requests: 0.5, 0.9, 0.95, 0.99
 
 upload-path: file:///C:/images/
 default-img-path: classpath:/static/default-image/
