--- a/noticeboard-admin/backend/build.gradle
+++ b/noticeboard-admin/backend/build.gradle
@@ -65,6 +65,9 @@ dependencies {
 	implementation 'com.warrenstrange:googleauth:1.5.0'
 	implementation 'com.google.zxing:core:3.5.3'
 	implementation 'com.google.zxing:javase:3.5.3'
+	
+	// 엑셀 파싱 라이브러리
+	implementation 'org.apache.poi:poi-ooxml:5.2.5'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
