feat: 감사 로그 기록을 위한 @AuditLog 어노테이션 정의 (#74)

--- a/noticeboard-admin/backend/build.gradle
+++ b/noticeboard-admin/backend/build.gradle
@@ -77,6 +77,9 @@ dependencies {
 	implementation 'org.thymeleaf:thymeleaf-spring6'
 	implementation "org.xhtmlrenderer:flying-saucer-pdf:${flyingSaucerVersion}"
 
+	// AOP
+	implementation 'org.springframework.boot:spring-boot-starter-aop'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
