--- a/noticeboard-service/nginx/default.conf
+++ b/noticeboard-service/nginx/default.conf
@@ -14,6 +14,8 @@ server {
     listen 443 ssl;
     server_name localhost;
 
+    set_real_ip_from 172.16.0.0/12;
+
     ssl_certificate /etc/nginx/ssl/server.crt;
     ssl_certificate_key /etc/nginx/ssl/server.key;
 
@@ -27,6 +29,7 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # 정적 파일 요청
