--- a/noticeboard-admin/frontend/package.json
+++ b/noticeboard-admin/frontend/package.json
@@ -18,6 +18,7 @@
     "@quasar/extras": "^1.16.4",
     "apexcharts": "^5.3.6",
     "axios": "^1.2.1",
+    "firebase": "^12.9.0",
     "pinia": "^3.0.1",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
