chore: 푸시 알림을 위한 Firebase Admin 라이브러리 의존성 추가 (#80)

--- a/noticeboard-admin/backend/build.gradle
+++ b/noticeboard-admin/backend/build.gradle
@@ -83,6 +83,9 @@ dependencies {
 	// AES 암호화
 	implementation 'org.springframework.security:spring-security-crypto'
 
+	// FCM 설정
+	implementation 'com.google.firebase:firebase-admin:9.2.0'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
